--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body{
     max-width: 600px;
     margin: auto;
-    font-size:14px;
+    font-size:12px;
     font-family: Arial, Helvetica, sans-serif;
 }
 /* 页脚 footer */
@@ -34,4 +34,73 @@ footer{
     display: block;
     margin: 0 auto;
     height: 100px;
+}
+nav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333
+}
+nav li {
+    float: left;
+}
+nav li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none
+}
+nav li a:hover{
+    background: #111111
+}
+.float-right{
+    float: right;
+}
+.vbaidu{
+    font-size: 12px;
+    font-weight: bolder;
+    color: black;
+    text-decoration: none;
+    background: #f5c518;
+    border-radius: 5px;
+    box-sizing: 5px 5px;
+}
+
+/* 美化input标签 */
+input[type=submit] {
+    font-family: inherit;
+}
+input[type=text] {
+    border: 1px solid black;
+}
+input[name=year] {
+    width: 50px;
+}
+.btn{
+    font-size: 12px;
+    padding: 3px 5px;
+    text-decoration: none;
+    cursor: pointer;
+    background: white;
+    color: black;
+    border: 1px solid #555555;
+    border-radius: 5px;
+}
+.btn:hover{
+    text-decoration: none;
+    background: black;
+    color: white;
+    border: 1px solid black;
+}
+.alert{
+    position: relative;
+    padding: 7px;
+    margin: 7px 0;
+    border: 1px solid transparent;
+    color: #004085;
+    background: #cce5ff;
+    border-color: #b8daff;
+    border-radius: 5px;
 }
