--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 <p>{{ movies|length }}</p>
+{# 表单 #}
+<form action="/" method="POST">
+    电影名 <input type="text" name="title" autocomplete="off" required>
+    年份 <input type="text" name="year" autocomplete="off" required>
+    <input type="submit" class="btn" name="submit" value="添加电影信息">
+</form>
+
 <ul class="movie-list">
     {% for movie in movies %}
     <li>
@@ -10,6 +17,14 @@
             <a class="vbaidu"
                 href="http://v.baidu.com/v?word={{ movie.title }}&ct=301989888&rn=67&pn=0&db=0&s=0&fbl=800&ie=utf-8&oq=nnkd&f=3&rsp=0"
                 target="_blank" title="在IMDb中查找此电影">百度视频</a>
+        </span>
+        <span class="float-right">
+            <a class="btn" href="{{ url_for('edit',movie_id=movie.id) }}">编辑</a>
+        </span>
+        <span class="float-right">
+            <form class="inline-form" action="{{ url_for('delete',movie_id=movie.id) }}" method="post">
+                <input type="submit" name='delete' value="删除" onclick="return confirm('确定删除吗？')">
+            </form>
         </span>
     </li>
     {% endfor %}
